<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Movies</string>
    <string name="activity_detail">Detail Movie</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Abdul Kahar Muzakir</string>
    <string name="nav_header_subtitle">abdulkaharmuzakir@mail.com</string>
    <string name="action_settings">Settings</string>
    <string name="tab_title_movie">Movies</string>
    <string name="tab_title_tv_show">Tv Show</string>
    <string name="tab_title_favorites">Favorite</string>
    <string name="change_language">Language</string>
    <string name="btn_favorite">Add to favorite</string>
    <string name="todo">TODO</string>
    <string name="description">Description</string>
    <string name="close">Close</string>

    <string name="warning_alert">WARNING</string>
    <string name="warning_alert_data_exists">Data already exists</string>
    <string name="data_add_success">Data added to favorites</string>
    <string name="data_delete_success">Data successfully deleted</string>


    <!-- TODO: Remove or change this placeholder text -->

    <!-- SETTING PREFERENCE -->
    <string name="daily_reminder">key_daily_reminder</string>
    <string name="release_reminder">key_release_reminder</string>
    <string name="changes_language">key_change_language</string>

    <string name="release_reminder_title">Release Reminder</string>
    <string name="release_reminder_summary">Reminder showing movie that release today</string>

    <string name="daily_reminder_title">Daily Reminder</string>
    <string name="daily_reminder_summary">Reminder for return to app</string>

    <string name="category_language">Language</string>
    <string name="category_language_summary">Change Language</string>


    <!-- REMINDER -->
    <string name="pop_up_reminder" tools:ignore="ExtraTranslation">has been release today!</string>
    <string name="reminder_notification">Application Movie missing you</string>
    <string name="reminder_release_on">Release reminder On</string>
    <string name="reminder_release_of">Release reminder Of</string>

    <string name="reminder_daily_on">Daily reminder On</string>
    <string name="reminder_daily_of">Daily reminder Of</string>

    <!-- MANIFEST_LABEL -->
    <string name="setting_name">Setting</string>
    <string name="search_name">Search</string>

    <!-- REMINDER_LABEL -->

    <!-- QUERY_HINT -->
    <string name="query_hint_movie">Search movie</string>
    <string name="query_hint_tv">Search tv show</string>

    <!-- WIDGET -->
    <string name="favorite_movie">Favorite Movie</string>
</resources>

